--- a/24ss/schedule.html
+++ b/24ss/schedule.html
@@ -395,7 +395,7 @@ document.write(`
                           <td class="text-left align-top">Programming -vs- software engineering, time, scale, and the trade-offs </td>
                           <td class="text-left align-top"><a href=https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch01.html>Chapter 1: What is Software Engineering?</a> from Software Engineering at Google.</td>
                           <td class="text-left align-top"></td>
-                          <td class="text-left align-top"></td>
+                          <td class="text-left align-top"><a href=/24ss/slides/lecture_2.html>Lecture Slides</a></td>
                         </tr><tr class="align-top">
                           <th scope="row" class="text-left align-top">Tue, Jan 16, 2024<br><span class="badge rounded-pill bg-warning text-dark">Warning</span></th>
                           <td class="text-left align-top">No Class</td>
@@ -407,9 +407,8 @@ document.write(`
                           <th scope="row" class="text-left align-top">Thu, Jan 18, 2024</th>
                           <td class="text-left align-top">Lecture 3: Teams </td>
                           <td class="text-left align-top">Team roles, developer strengths and growth, meetings, collaboration tools</td>
-                          <td class="text-left align-top"><a href=https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html>Chapter 2: How to Work Well on Teams</a> from Software Engineering at Google.
-<a href=https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml>Chapter 2: The Mythical Man-Month</a> from The Mythical Man-Month.</td>
-                          <td class="text-left align-top"></td>
+                          <td class="text-left align-top"><a href=https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html>Chapter 2: How to Work Well on Teams</a> from Software Engineering at Google.<br> <a href=https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml>Chapter 2: The Mythical Man-Month</a> from The Mythical Man-Month.</td>
+                          <td class="text-left align-top">Course project team declaration</td>
                           <td class="text-left align-top"></td>
                         </tr><tr class="align-top">
                           <th scope="row" class="text-left align-top">Tue, Jan 23, 2024</th>
