--- a/24ss/slides/lecture_2/lecture_2.html
+++ b/24ss/slides/lecture_2/lecture_2.html
@@ -362,19 +362,6 @@
 <h2></h2>
 <p>Process inefficiencies and other software-development tasks tend to scale up slowly. Be careful about boiled-frog problems.</p>
 </section>
-<section id="beyoncé-rule" class="slide level2">
-<h2>Beyoncé Rule</h2>
-<p>“If you like it, then you shoulda put a CI (Continuous Integration) test on it,” promotes a culture of ownership and responsibility among software development teams, especially when it comes to dependencies on code from other teams.</p>
-<p>Here’s how this rule can facilitate ownership in such scenarios:</p>
-<ol type="1">
-<li><p><strong>Proactive Testing</strong>: By encouraging teams to thoroughly test their code, including the integration points with dependencies from other teams, it ensures that teams are proactive in identifying and resolving potential issues before they escalate. This approach reduces the likelihood of unexpected failures due to external dependencies.</p></li>
-<li><p><strong>Early Detection of Issues</strong>: Continuous Integration (CI) tests run automatically whenever changes are made. This means that if a change in one team’s code adversely affects another team’s code, the issue can be detected immediately. It places the responsibility on the original team to ensure their changes do not break existing functionalities.</p></li>
-<li><p><strong>Encouraging Collaboration</strong>: When each team takes ownership of testing their integrations, it fosters better communication and collaboration between teams. If a team’s update causes a failure in another team’s code, the testing process naturally initiates a dialogue to address and resolve the issue collaboratively.</p></li>
-<li><p><strong>Building a Culture of Accountability</strong>: The rule embeds a mindset of accountability. Teams know that they are responsible not only for their code’s functionality but also for ensuring it integrates seamlessly with other parts of the system. This reduces blame-shifting and promotes a more constructive approach to problem-solving.</p></li>
-<li><p><strong>Continual Monitoring and Improvement</strong>: Continuous Integration allows for ongoing monitoring of the system’s health. Teams are more inclined to continuously improve their code, keeping in mind the broader impact on the system, thus maintaining high standards of code quality and system stability.</p></li>
-<li><p><strong>Reduction in Dependency Risks</strong>: By applying rigorous tests, teams can better understand and manage the risks associated with external dependencies. This knowledge helps in making informed decisions about using and updating those dependencies.</p></li>
-</ol>
-</section>
 <section id="section-5" class="slide level2 center">
 <h2></h2>
 <p>Expertise pays off particularly well when combined with economies of scale.</p>
@@ -390,6 +377,25 @@
 <section id="section-8" class="slide level2 center">
 <h2></h2>
 <p>Being data driven over time implies the need to change directions when the data changes (or when assumptions are dispelled). Mistakes or revised plans are inevitable.</p>
+</section>
+<section id="beyoncé-rule" class="slide level2">
+<h2>Beyoncé Rule</h2>
+<p>“If you like it, then you shoulda put a CI (Continuous Integration) test on it,” promotes a culture of ownership and responsibility among software development teams, especially when it comes to dependencies on code from other teams.</p>
+<p>Here’s how this rule can facilitate ownership in such scenarios:</p>
+<ol type="1">
+<li><p><strong>Proactive Testing</strong>: By encouraging teams to thoroughly test their code, including the integration points with dependencies from other teams, it ensures that teams are proactive in identifying and resolving potential issues before they escalate. This approach reduces the likelihood of unexpected failures due to external dependencies.</p></li>
+<li><p><strong>Early Detection of Issues</strong>: Continuous Integration (CI) tests run automatically whenever changes are made. This means that if a change in one team’s code adversely affects another team’s code, the issue can be detected immediately. It places the responsibility on the original team to ensure their changes do not break existing functionalities.</p></li>
+<li><p><strong>Encouraging Collaboration</strong>: When each team takes ownership of testing their integrations, it fosters better communication and collaboration between teams. If a team’s update causes a failure in another team’s code, the testing process naturally initiates a dialogue to address and resolve the issue collaboratively.</p></li>
+<li><p><strong>Building a Culture of Accountability</strong>: The rule embeds a mindset of accountability. Teams know that they are responsible not only for their code’s functionality but also for ensuring it integrates seamlessly with other parts of the system. This reduces blame-shifting and promotes a more constructive approach to problem-solving.</p></li>
+<li><p><strong>Continual Monitoring and Improvement</strong>: Continuous Integration allows for ongoing monitoring of the system’s health. Teams are more inclined to continuously improve their code, keeping in mind the broader impact on the system, thus maintaining high standards of code quality and system stability.</p></li>
+<li><p><strong>Reduction in Dependency Risks</strong>: By applying rigorous tests, teams can better understand and manage the risks associated with external dependencies. This knowledge helps in making informed decisions about using and updating those dependencies.</p></li>
+</ol>
+</section>
+<section id="whiteboard-markers" class="slide level2 center">
+<h2>Whiteboard Markers</h2>
+<blockquote>
+<p>“In many organizations, whiteboard markers are treated as precious goods. They are tightly controlled and always in short supply….Somewhere along the line &gt; we made an explicit trade-off: it is far more important to optimize for obstacle-free brainstorming than to protect against someone wandering off with a bunch of markers.”</p>
+</blockquote>
 </section>
 <section id="reminders" class="slide level2">
 <h2>Reminders</h2>
