--- a/24ss/slides/lecture_2/lecture_2.html
+++ b/24ss/slides/lecture_2/lecture_2.html
@@ -397,6 +397,10 @@
 <p>“In many organizations, whiteboard markers are treated as precious goods. They are tightly controlled and always in short supply….Somewhere along the line &gt; we made an explicit trade-off: it is far more important to optimize for obstacle-free brainstorming than to protect against someone wandering off with a bunch of markers.”</p>
 </blockquote>
 </section>
+<section id="section-9" class="slide level2 center">
+<h2></h2>
+<p>Would anyone like to take a QUIZ?</p>
+</section>
 <section id="reminders" class="slide level2">
 <h2>Reminders</h2>
 <ol type="1">
