lab 2 and course project updates

--- a/24ss/slides/lecture_2/lecture_2.html
+++ b/24ss/slides/lecture_2/lecture_2.html
@@ -30,6 +30,7 @@
     }
   </style>
   <link rel="stylesheet" href="lecture_2_files/libs/revealjs/dist/theme/quarto.css">
+  <link rel="stylesheet" href="../styles.css">
   <link href="lecture_2_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="lecture_2_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="lecture_2_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -242,6 +243,7 @@
     }
     .reveal .slide:not(.center) {
       height: 100%;
+      overflow-y: auto;
     }
     .reveal .slide.scrollable {
       overflow-y: auto;
@@ -567,7 +569,7 @@
         hideCursorTime: 5000,
 
         // Opens links in an iframe preview overlay
-        previewLinks: false,
+        previewLinks: true,
 
         // Transition style (none/fade/slide/convex/concave/zoom)
         transition: 'none',
