updates to lab 2

--- a/graded_artifacts/lab_assignments/lab_assignments.html
+++ b/graded_artifacts/lab_assignments/lab_assignments.html
@@ -388,7 +388,7 @@ document.write(`
 <col style="width: 70%" />
 </colgroup>
 <thead>
-<tr class="row-odd"><th class="head"><p>Quiz No.</p></th>
+<tr class="row-odd"><th class="head"><p>Lab Assignment.</p></th>
 <th class="head"><p>Date</p></th>
 </tr>
 </thead>
