--- a/24ss/schedule.html
+++ b/24ss/schedule.html
@@ -453,7 +453,7 @@ document.write(`
                         <ul style='padding-left: 5px;'><li>Course project team declaration deadline.</li></ul>
                       </td>
                       <td style="text-align: left;vertical-align: top;">
-                        <ul style='padding-left: 5px;'><li><a href="/24ss/slides/lecture_3/lecture_3.html">Lecture slides</a></li></ul>
+                        <ul style='padding-left: 5px;'><li><a href="/24ss/slides/lecture_3/lecture_3.html">Lecture slides - 1</a></li><li><a href="/24ss/slides/lecture_3/18JAN2024.pptx">Lecture slides - 2</a></li></ul>
                       </td>
                     </tr><tr style="align:top">
                       <td style="vertical-align: top;">
