corrected link to ch3 - knowledge sharing

--- a/24ss/schedule.html
+++ b/24ss/schedule.html
@@ -447,7 +447,7 @@ document.write(`
                         <p style="margin-top: -10px">Team roles, working in teams, knowledge sharing.</p>
                       </td>
                       <td style="text-align: left;vertical-align: top;">
-                        <ul style='padding-left: 5px;'><li><a href="https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html">Chapter 2: How to Work Well on Teams</a></li><li><a href="https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch03.htm">Chapter 3: Knowledge Sharing</a></li><li><a href="https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml">Chapter 2: The Mythical Man-Month</a></li></ul>
+                        <ul style='padding-left: 5px;'><li><a href="https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch02.html">Chapter 2: How to Work Well on Teams</a></li><li><a href="https://learning.oreilly.com/library/view/software-engineering-at/9781492082781/ch03.html">Chapter 3: Knowledge Sharing</a></li><li><a href="https://learning.oreilly.com/library/view/mythical-man-month-the/0201835959/ch02.xhtml">Chapter 2: The Mythical Man-Month</a></li></ul>
                       </td>
                       <td style="text-align: left;vertical-align: top;">
                         <ul style='padding-left: 5px;'><li>Course project team declaration deadline.</li></ul>
