update to schedule

--- a/24ss/schedule.html
+++ b/24ss/schedule.html
@@ -461,8 +461,8 @@ document.write(`
                         
                       </td>
                       <td style="text-align: left;vertical-align: top;">
-                        <p style="font-weight: bold;"></p>
-                        <p style="margin-top: -10px"></p>
+                        <p style="font-weight: bold;">Software Development Life Cycle</p>
+                        <p style="margin-top: -10px">Traditional, Agile, and DevOps software development life cycles.</p>
                       </td>
                       <td style="text-align: left;vertical-align: top;">
                         
