adding SDLC stage roles

--- a/24ss/slides/lecture_4.html
+++ b/24ss/slides/lecture_4.html
@@ -340,7 +340,10 @@
 <ul>
 <li>Online @ 12:30 p.m. ~ 30 minutes.</li>
 </ul></li>
-<li>Course project will only shift to a single</li>
+<li>Course project will no longer have midpoint deliverable. (more at end of lecture)
+<ul>
+<li>But … adding an extra lab.</li>
+</ul></li>
 </ul>
 </section>
 <section id="todays-agenda" class="slide level2">
@@ -452,6 +455,14 @@
           display:block!important;
       }</style></aside>
 </section>
+<section id="stage-1-project-planning-roles" class="slide level2">
+<h2>Stage 1: Project Planning Roles</h2>
+<ul>
+<li><strong>Project Managers</strong> lead the planning stage, focusing on project scope, timeline, resources, and budget.</li>
+<li><strong>Project Sponsors</strong> and other business representatives are involved in defining goals and expectations.</li>
+<li><strong>Senior Development Team Members</strong> may also contribute to the planning, especially in technical aspects.</li>
+</ul>
+</section>
 <section id="stage-2-requirements-gathering-analysis" class="slide level2">
 <h2>Stage 2: Requirements Gathering &amp; Analysis</h2>
 <p><strong>Requirements Gathering &amp; Analysis</strong> involves in-depth discussions with stakeholders to capture the detailed requirements of the software product.</p>
@@ -472,6 +483,14 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section>
+<section id="stage-2-requirements-gathering-analysis-roles" class="slide level2">
+<h2>Stage 2: Requirements Gathering &amp; Analysis Roles</h2>
+<ul>
+<li><strong>Business Analysts</strong> are key in gathering and analyzing requirements from customers, target market, and industry experts.</li>
+<li><strong>Project Managers</strong> may have a minor role in communication and managing timelines and scope changes.</li>
+<li><strong>Business Representatives</strong> provide detailed targets and insights about the business problem the software aims to solve.</li>
+</ul>
 </section>
 <section id="stage-3-design" class="slide level2">
 <h2>Stage 3: Design</h2>
@@ -495,6 +514,14 @@
           display:block!important;
       }</style></aside>
 </section>
+<section id="stage-3-design-roles" class="slide level2">
+<h2>Stage 3: Design Roles</h2>
+<ul>
+<li><strong>Product Architects</strong> and <strong>Developers</strong> work on the design of the product, creating multiple design approaches.</li>
+<li><strong>UI/UX Designers</strong> focus on creating a visually interesting interface and ensuring a great user experience.</li>
+<li>The design is often documented in a Design Document Specification (DDS).</li>
+</ul>
+</section>
 <section id="stage-4-coding-or-implementation" class="slide level2">
 <h2>Stage 4: Coding or Implementation</h2>
 <p><strong>Coding or Implementation</strong> is the phase where the software design is translated into source code.</p>
@@ -516,6 +543,14 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section>
+<section id="stage-4-coding-or-implementation-roles" class="slide level2">
+<h2>Stage 4: Coding or Implementation Roles</h2>
+<ul>
+<li><strong>Developers</strong> translate the design into code, using various programming languages and tools.</li>
+<li><strong>Technical Leads</strong> communicate with Project Managers and Business Analysts, ensuring the development aligns with project goals.</li>
+<li><strong>Junior, Middle, and Senior Developers</strong> work together, each bringing different levels of expertise.</li>
+</ul>
 </section>
 <section id="stage-5-testing" class="slide level2">
 <h2>Stage 5: Testing</h2>
@@ -539,6 +574,14 @@
           display:block!important;
       }</style></aside>
 </section>
+<section id="stage-5-testing-roles" class="slide level2">
+<h2>Stage 5: Testing Roles</h2>
+<ul>
+<li><strong>Quality Assurance (QA) Specialists</strong> test the software to identify bugs and issues.</li>
+<li><strong>Automation Engineers</strong> might be involved in automated testing.</li>
+<li>The goal is to ensure the software meets the initial requirements and is free of defects.</li>
+</ul>
+</section>
 <section id="stage-6-deployment" class="slide level2">
 <h2>Stage 6: Deployment</h2>
 <p><strong>Deployment</strong> involves making the software available for use by end-users.</p>
@@ -560,6 +603,20 @@
           display:block!important;
       }</style></aside>
 </section>
+<section id="stage-6-deployment-roles" class="slide level2">
+<h2>Stage 6: Deployment Roles</h2>
+<ul>
+<li><p><strong>Deployment Engineers</strong> handle the software’s release, making it available to customers. They have a very crucial role …</p>
+<ol type="1">
+<li><p><strong>Building the Deployment Package</strong>: They create the package that includes all the necessary components for installing, updating, or running the software. This process involves compiling code, including necessary libraries, and ensuring that the software is configured correctly for the deployment environment.</p></li>
+<li><p><strong>Preparing the Deployment Environment</strong>: Deployment Engineers often prepare the environments where the software will be deployed, which can include tasks like setting up servers, configuring databases, and ensuring network connectivity.</p></li>
+<li><p><strong>Automating Deployment Processes</strong>: They often work on automating the deployment process to make it as efficient and error-free as possible. This includes scripting the steps needed to deploy the software and setting up continuous integration/continuous deployment (CI/CD) pipelines.</p></li>
+<li><p><strong>Testing the Deployment Process</strong>: Before the actual deployment, they might conduct test deployments to ensure everything works as expected. This can include load testing, verifying integration points, and ensuring that the software operates correctly in the target environment.</p></li>
+<li><p><strong>Monitoring and Troubleshooting</strong>: Post-deployment, they monitor the software’s performance and quickly address any issues that arise. This can involve analyzing logs, fixing bugs, and making necessary adjustments to the deployment setup.</p></li>
+<li><p><strong>Collaboration and Documentation</strong>: They often collaborate with other teams, such as development, testing, and operations, to ensure smooth deployment. They also document the deployment process and maintain records of the deployment details for future reference.</p></li>
+</ol></li>
+</ul>
+</section>
 <section id="stage-7-maintenance" class="slide level2">
 <h2>Stage 7: Maintenance</h2>
 <p><strong>Maintenance</strong> is the ongoing process of updating the software and solving problems encountered in the live environment.</p>
@@ -580,6 +637,13 @@
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
+</section>
+<section id="stage-7-maintenance-roles" class="slide level2">
+<h2>Stage 7: Maintenance Roles</h2>
+<ul>
+<li><strong>Support Engineers</strong> and <strong>Maintenance Developers</strong> address ongoing maintenance, such as bug fixing and updates.</li>
+<li><strong>Help Desk or Technical Support Teams</strong> provide user support and collect feedback for further improvements.</li>
+</ul>
 </section></section>
 <section>
 <section id="software-development-life-cycle-sdlc-methodologies" class="title-slide slide level1 center">
